# test_task_tetrika

./: README.md  pyproject.toml  task_1.py  task_2.py  task_3.py
